--- a/logging.properties
+++ b/logging.properties
@@ -1,7 +1,12 @@
 handlers = java.util.logging.ConsoleHandler
+#, java.util.logging.SocketHandler
 
 # Enable this to show logging for all loggers
 #.level = FINE
 
 java.util.logging.ConsoleHandler.level = FINE
 net.finmath.level = FINE
+
+#java.util.logging.SocketHandler.level = FINE
+#java.util.logging.SocketHandler.host = localhost
+#java.util.logging.SocketHandler.port = 50505
