Added logging properties.

--- a/logging.properties
+++ b/logging.properties
@@ -1,12 +1,16 @@
-handlers = java.util.logging.ConsoleHandler
-#, java.util.logging.SocketHandler
+handlers = java.util.logging.ConsoleHandler, java.util.logging.SocketHandler
 
 # Enable this to show logging for all loggers
-#.level = FINE
+#.level=FINE
 
-java.util.logging.ConsoleHandler.level = FINE
-net.finmath.level = FINE
+net.finmath.level=FINEST
 
-#java.util.logging.SocketHandler.level = FINE
-#java.util.logging.SocketHandler.host = localhost
-#java.util.logging.SocketHandler.port = 50505
+# Logging messages to be send to the console
+java.util.logging.ConsoleHandler.level=FINE
+
+# Logging messages to be send to TCP/IP socket
+java.util.logging.SocketHandler.level=FINEST
+java.util.logging.SocketHandler.host=127.0.0.1
+java.util.logging.SocketHandler.port=50505
+java.util.logging.SocketHandler.formatter=java.util.logging.SimpleFormatter
+
