--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>net.finmath</groupId>
 	<artifactId>finmath-lib-cuda-extensions</artifactId>
-	<version>5.0.6-SNAPSHOT</version>
+	<version>5.1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>finmath-lib-cuda-extensions</name>
@@ -42,6 +42,7 @@
 		<maven-project-info-reports-plugin.version>3.1.0</maven-project-info-reports-plugin.version>
 		<maven-scm-publish-plugin.version>3.0.0</maven-scm-publish-plugin.version>
 		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+		<maven-bnd-plugin.version>5.3.0</maven-bnd-plugin.version>
 	</properties>
 
 	<licenses>
@@ -286,7 +287,7 @@
 			<plugin>
 				<groupId>biz.aQute.bnd</groupId>
 				<artifactId>bnd-maven-plugin</artifactId>
-				<version>4.0.0</version>
+				<version>${maven-bnd-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -303,7 +304,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Automatic-Module-Name>net.finmath.gpu</Automatic-Module-Name>
+							<Automatic-Module-Name>net.finmath.cuda</Automatic-Module-Name>
 						</manifestEntries>
 						<manifest>
 							<addClasspath>true</addClasspath>
