--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>net.finmath</groupId>
 	<artifactId>finmath-lib-cuda-extensions</artifactId>
-	<version>5.1.2-SNAPSHOT</version>
+	<version>5.1.3</version>
 	<packaging>jar</packaging>
 
 	<name>finmath-lib-cuda-extensions</name>
@@ -631,7 +631,7 @@
 			<activation>
 				<property>
 					<name>cuda.version</name>
-					<value></value>
+					<value />
 				</property>
 			</activation>
 			<properties>
@@ -739,6 +739,6 @@
 		<url>https://github.com/finmath/finmath-lib-cuda-extensions</url>
 		<connection>scm:git:https://github.com/finmath/finmath-lib-cuda-extensions.git</connection>
 		<developerConnection>scm:git:https://github.com/finmath/finmath-lib-cuda-extensions.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>finmath-lib-cuda-extensions-5.1.3</tag>
 	</scm>
 </project>
